# game-engine-from-scratch

./: CMakeLists.txt  README.md
control/: callbackControl.h  controllable.h
graphics/: CMakeLists.txt  camera.cpp  camera.h  fragmentshader.glsl  graphics.cpp  graphics.h  renderData.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexshader.glsl
graphics/shaders/: fragmentshader.glsl  vertexshader.glsl
openglstudy/: CMakeLists.txt  engine.cpp  engine.h  openglstudy.cpp  openglstudy.h
